<resources>
    <string name="app_name">Gardine</string>

    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>

    <string name="accessibility_service_name">Gardine Service</string>
    <string name="accessibility_service_description">Track all recent activities</string>

    <string name="title_activity_main">Gardine</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preferences -->
    <string name="pref_widget_enabled_key">pref_widget_enabled_key</string>
    <string name="pref_widget_enabled_title">Widget enabled</string>

    <string name="pref_category_look_and_feel_title">Look &amp; Feel</string>
    <string name="pref_category_functional_title">Functional settings</string>

    <string name="pref_vibrate_on_scroll_key">pref_vibrate_on_scroll_key</string>
    <string name="pref_vibrate_on_scroll_title">Vibrate on scroll</string>

    <string name="pref_use_icons_key">pref_use_icons_key</string>
    <string name="pref_use_icons_title">Use icons</string>

    <string name="pref_widget_background_color_key">pref_widget_background_color_key</string>
    <string name="pref_widget_background_color_title">Collapsed widget background color</string>

    <string name="pref_expanded_widget_background_color_key">pref_expanded_widget_background_color_key</string>
    <string name="pref_expanded_widget_background_color_title">Expanded widget background color</string>

    <string name="pref_widget_height_key">pref_widget_height_key</string>
    <string name="pref_widget_height_title">Collapsed widget height</string>

    <string name="pref_widget_width_key">pref_widget_width_key</string>
    <string name="pref_widget_width_title">Collapsed widget width</string>

    <string name="pref_widget_position_key">pref_widget_position_key</string>
    <string name="pref_widget_position_title">Widget position</string>
    <string name="pref_widget_position_value_top_right">Top - Right</string>
    <string name="pref_widget_position_value_top_left">Top - Left</string>
    <string name="pref_widget_position_value_bottom_right">Bottom - Right</string>
    <string name="pref_widget_position_value_bottom_left">Bottom - Left</string>

    <string name="pref_widget_point_to_select_key">pref_widget_point_to_select_key</string>
    <string name="pref_widget_point_to_select_title">Point to select</string>

    <string name="pref_ignore_list_key">pref_ignore_list_key</string>
    <string name="pref_ignore_list_title">Applications to ignore</string>

    <!-- Errors -->
    <string name="error_application_not_found">Application %s has been deleted.</string>

</resources>
