<androidx.preference.PreferenceScreen xmlns:gardine="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreferenceCompat
        gardine:key="@string/pref_widget_enabled_key"
        gardine:title="@string/pref_widget_enabled_title"
        gardine:defaultValue="true"/>


    <PreferenceCategory
        gardine:title="@string/pref_category_look_and_feel_title">

        <SwitchPreferenceCompat
            gardine:key="@string/pref_vibrate_on_scroll_key"
            gardine:title="@string/pref_vibrate_on_scroll_title"
            gardine:defaultValue="true"
            />

        <SwitchPreferenceCompat
            gardine:key="@string/pref_use_icons_key"
            gardine:title="@string/pref_use_icons_title"
            gardine:defaultValue="false"
            />

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            gardine:key="@string/pref_widget_background_color_key"
            gardine:title="@string/pref_widget_background_color_title"
            gardine:preference_attachAlphaSlideBar="true"
            gardine:preference_attachBrightnessSlideBar="true"
            gardine:preference_colorBox_radius="26dp"
            gardine:preference_dialog_negative="@string/cancel"
            gardine:preference_dialog_positive="@string/confirm"
            gardine:preference_dialog_title="@string/pref_widget_background_color_title"
            gardine:default_color="@color/default_color_collapsed_widget"/>

        <com.skydoves.colorpickerpreference.ColorPickerPreference
            gardine:key="@string/pref_expanded_widget_background_color_key"
            gardine:title="@string/pref_expanded_widget_background_color_title"
            gardine:preference_attachAlphaSlideBar="true"
            gardine:preference_attachBrightnessSlideBar="true"
            gardine:preference_colorBox_radius="26dp"
            gardine:preference_dialog_negative="@string/cancel"
            gardine:preference_dialog_positive="@string/confirm"
            gardine:preference_dialog_title="@string/pref_expanded_widget_background_color_title"
            gardine:default_color="@color/default_color_expanded_widget"/>

        <ListPreference
            gardine:key="@string/pref_widget_position_key"
            gardine:title="@string/pref_widget_position_title"
            gardine:entries="@array/pref_widget_position_entries"
            gardine:entryValues="@array/pref_widget_position_entry_values"
            gardine:defaultValue="TOP_RIGHT"/>

        <SwitchPreferenceCompat
            gardine:key="@string/pref_widget_point_to_select_key"
            gardine:title="@string/pref_widget_point_to_select_title"
            gardine:defaultValue="false"/>

        <SeekBarPreference
            gardine:key="@string/pref_widget_height_key"
            gardine:title="@string/pref_widget_height_title"
            android:max="400"
            gardine:showSeekBarValue="true"
            gardine:adjustable="true"
            gardine:defaultValue="300"/>

        <SeekBarPreference
            gardine:key="@string/pref_widget_width_key"
            gardine:title="@string/pref_widget_width_title"
            android:max="50"
            gardine:showSeekBarValue="true"
            gardine:adjustable="true"
            gardine:defaultValue="15"/>


    </PreferenceCategory>

</androidx.preference.PreferenceScreen>
